# TxTReader

./: +.txt  .gitignore  BufferedRead.c  BufferedRead.h  CMakeLists.txt  Title.cbp  Title.depend  Title.layout  global.c  global.h  main.c
array/: array.c  array.h
buffer/: buffer.h
bufferedRead/: bufferedRead.c  bufferedRead.h
dataModel/: dataModel.c  dataModel.h  datamodel.h
docker/: docker.c  docker.h
fileSamples/: +.txt  -.txt
font/: font.c  font.h
resources/: about.rc  reader.rc  resource.h
viewModel/: viewModel.c  viewModel.h
